# v4l2-opencv

./: CMakeLists.txt  README.md
include/: Config.h  opencv.h
lib/: camera.cpp  cv.cpp
src/: main.cpp
